# wicky-monads

./: CMakeLists.txt  README.md  common.c  common.h  monad.c  monad.cxx  wic.c
man/: monad.md  wic.md
